--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,7 +37,7 @@ Style/Documentation:
   Enabled: false
 
 Style/StringLiterals:
-  Enabled: false
+  Enabled: true
 
 Style/HashEachMethods:
   Enabled: true
